# tmux-seer

./: .gitignore  Cargo.toml  README.md  install.sh  justfile  tmux-seer.tmux
.github/workflows/: ci.yml  release.yml
src/: adapters.rs  bootstrap.rs  collector.rs  daemon.rs  diagnostics.rs  hook_state.rs  lib.rs  main.rs  model.rs  navigation.rs  popup.rs  reducer.rs  remote.rs  runtime.rs  scheduler.rs  setup.rs  snapshot.rs  tmux.rs  ui.rs  watcher.rs
tests/: bootstrap.rs  cli.rs  collector.rs  daemon.rs  diagnostics.rs  hook_state.rs  model.rs  navigation.rs  packaging.sh  popup.rs  remote.rs  runtime.rs  scheduler.rs  setup.rs  snapshot.rs  tmux.rs  ui.rs  watcher.rs
