[package]
name = "tmux-seer"
version = "0.2.0"
edition = "2021"
rust-version = "1.89"
description = "Cross-session and cross-host tmux agent monitor"
repository = "https://github.com/carlosarraes/tmux-seer"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
dirs = "6.0"
fs2 = "0.4"
notify = "8.2"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
similar = "3.1"
thiserror = "2.0"
tokio = { version = "1.45", features = ["io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.20"
temp-env = "0.3"
